SET GLOBAL time_zone = '+5:30'
 &

 added manual constructors NO LOMBOOK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3308/dbcheboss?useSSL=false
+## Database Properties       SET GLOBAL time_zone = '+00:00'
+spring.datasource.url = jdbc:mysql://localhost:3308/chebossdb?useSSL=false
 spring.datasource.username = root
 spring.datasource.password =
 
