SET GLOBAL time_zone = '+5:30'
 &

 added manual constructors NO LOMBOOK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-## Database Properties       SET GLOBAL time_zone = '+00:00'
+## Database Properties       SET GLOBAL time_zone = '+00:00';
 spring.datasource.url = jdbc:mysql://localhost:3308/chebossdb?useSSL=false
 spring.datasource.username = root
 spring.datasource.password =
