--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ## Database Properties       SET GLOBAL time_zone = '+00:00';
-spring.datasource.url = jdbc:mysql://localhost:3308/chebossdb?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3308/dbcheboss?useSSL=false
 spring.datasource.username = root
 spring.datasource.password =
 
